--- a/Integreat/Integreat/Base.lproj/Main.storyboard
+++ b/Integreat/Integreat/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fA0-Tr-uZW">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="fA0-Tr-uZW">
                                             <rect key="frame" x="19" y="8" width="141" height="87"/>
                                         </imageView>
                                     </subviews>
